profile.css
/*
Names: Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968
Github URL: https://github.com/rawansaab/ex1
*/
* {
    box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Bree Serif", serif;  
  background-image: url("background.webp");
  background-attachment: fixed;
  background-repeat: repeat;
}

.main-container {
  width: 80%;
  margin: 3% auto;
  background-color: white;
  box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2); 
  position: relative;
}

#banner{
  height: 350px;
  background-image: url("banner.png");
  background-repeat: no-repeat;
  background-size: 100%;
  position: relative;
}

.profile-img-wrapper {
  position: relative;
  height: 100%;
  left: 2%;
}

.profile-img {
  border: 10px solid white;
  width: 200px;
  height: 200px;
  top: 70%;
  left: -2%;
  border-radius: 50%;
  position: absolute;
}

.main-title {
  font-size: 3vw;
  font-family: "Rammetto One", cursive;
  padding-top: 10px;
  text-shadow: 3px 3px 1px #999999;
  text-align: center;
  margin: 0;
}

.content-block {
  display: flex; 
  justify-content: space-between;
  align-items: center;
  padding: 2% 5%;
}

.text-column, .image-column{
  flex: 1;
}

.content-block img {
  display: block;
  margin: 0 auto;
  max-height: 600px;
  max-width: 400px;
  width: 30vw;
}

.info-section .text-column {
  padding-right: 20px; 
}

.info-row {
  display: flex;
  margin-bottom: 15px;
  align-items: flex-start;
}

.info-label {
  width: 40%; 
  font-weight: bold;
}

.info-value {
  width: 60%; 
}

.info-value ul {
  margin: 0;
  padding-left: 20px;
}

.endorsements-section {
  background-image: url("clouds.webp");
  background-repeat: repeat;
  flex-direction: row-reverse;
  font-weight: bold;
  text-align: center;
}

.endorsements-section h2 {
  font-family: 'Rammetto One', cursive;
  text-transform: uppercase;
  font-size: 2.5vw;
  margin-top: 0;
}

.endorsement-card {
  border-left: 10px solid #cccaca;
  background-color: white;
  margin-bottom: 15px;
  padding: 10px;
}

.endorsement-card hr {
  width: 40%;
  margin-left: 0;
  border: 1px solid #ccc;
}

.endorsement-card span {
  font-style: italic;
  display: block;
  margin-top: 5px;
}

.friends-section {
  padding: 2% 5%;
  text-align: center;
}

.friends-section h2 {
  font-family: 'Rammetto One', cursive;
  font-size: 2.5vw;
  text-transform: uppercase;
}

.friends-grid {
  display: flex;
  flex-wrap: wrap; 
  justify-content: space-between;
  width: 100%;                   
}

.friends-grid img {
  padding: 10px;
  height: 300px;
  width: 200px;
  box-sizing: border-box;
  object-fit: cover;
  object-position: center top;
}

.footer {
  background-color: #5f5b5b;
  padding: 10px;
  color: black;
  font-weight: bold;
  text-align: center;
}

@media screen and (max-width: 768px) {
  .main-container {
    width: 100%;
    margin: 0;
  }

  .main-title {
    font-size: 8vw;
  }

  .content-block {
    flex-direction: column;
    align-items: stretch;
  }

  .content-block .image-column {
    order: -1;
    margin-bottom: 20px;

  }

  .content-block .text-column {
    padding-right: 0;
  }

  .content-block img {
    width: 80vw;
    max-width: 400px;
    max-height: 600px;
    height: auto;
  }

  .friends-grid {
    justify-content: center;
  }
}

